--- a/16.Spring Data JPA/ProductApp/src/main/resources/application.properties
+++ b/16.Spring Data JPA/ProductApp/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=postgres
 spring.datasource.password=0000
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
