--- a/18. Spring Data Rest/SpringDataRest/src/main/resources/application.properties
+++ b/18. Spring Data Rest/SpringDataRest/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=postgres
 spring.datasource.password=0000
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+logging.level.org.hibernate.engine.transaction.jta.platform.internal.JtaPlatformInitiator=warn
